--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@
 server.port=8888
 #修改swagger路径匹配规则
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+#mysql配置
+spring.datasource.url=jdbc:mysql://localhost:3306/ssj?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=password
+#jpa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
